// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Descriptive Card Displays custom properties 1`] = `
<v-card-stub loaderheight="4" tag="div" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <!---->
  <div class="d-flex justify-center pb-4">
    <icon-stub type="model-unsubscribe" size="60" color="primary" fillopacity="1" class="d-block"></icon-stub>
  </div>
  <div data-e2e="card-title" class="text-h4 px-3 pb-2 primary--text">
    Propensity to Unsubscribe
  </div>
  <div data-e2e="card-description" class="text-caption px-3">
    Propensity of a customer making a purchase after receiving an email.
  </div>
  <!---->
</v-card-stub>
`;

exports[`Cards Descriptive Card Displays custom slots 1`] = `
<v-card-stub loaderheight="4" tag="div" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <div class="pa-3 pb-0">
    <div>Top spot</div>
  </div>
  <!---->
  <div data-e2e="card-title" class="text-h4 px-3 pb-2 primary--text">
    Model Name
  </div>
  <div data-e2e="card-description" class="text-caption px-3">
    Descriptive text for the model item chosen above
  </div>
  <div class="px-3 pt-2">
    <p>Default content</p>
  </div>
</v-card-stub>
`;
